--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "js-cookie": "^3.0.5",
+    "laravel-echo": "^1.15.1",
+    "pusher-js": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0"
